pre-0.16.9:
- avr: stepper definition support via AVRStepperPins.h
- 2560: all timers and channels are checked with one test

0.16.8:
- Fix for issue #30: for dirPin undefined, digitalWrite/pinMode was called

0.16.7:
- Avoid unnecessary direction pin toggle on direction change after motor stop
- Fix MAX_STEPPER for atmega2560
- Extend simavr tests for atmega2560 and one test for each timer for both varians

0.16.6:
- bugfix in setEnablePin(): if called with PIN_UNDEFINED, that value was used with pinMode and digitalWrite()
- Use simavr to perform regression test for avr on HW-simulation
- Reworked the avr ISR code to avoid steps being lost, if the command queue is running out of commands and a new command comes in with steps to be generated
- Extended the planning ahead time to 20ms.... possibly the load for avr is bit high !? 

0.16.5:
- esp32: forwardStep()/backwardStep() works again
- Fix for issue #25: RampGenerator was irritated, if interrupt has processed command too fast.
- Rework definition of isRunning() for esp32 to make it more like avr

0.16.4:
- Example code for platformio (built with ci/build-platformio.sh) references the library code
  via platformio.ini option and not via symbolic links.
- StepperDemo test mode extended:
	- x: Allows to exit test mode
    - I: Allows to toggle motor info while test sequence is running
    - New test sequence 06 due to issue #24
- Fix for issue #24: unplanned stop due to speed changes during ramp down

0.16.3:
- Add another test case for speed reduction, while running (see issue #23)
  This has identified a bug in the ramp generator impacting esp32/avr. This bug is now fixed.

0.16.2:
- Add comments to example RawAccessWithPause (renamed from RawAccessWithDelay)
- addQueueEntry() expects now a const pointer instead of just a pointer
- Rework RawAccess example and test on hw

0.16.1:
- Usage example in readme has not worked due to a bug in the auto enable/disable variable setting.