@@ -77,11 +77,19 @@ void queue_out_of_range() {
   assert(s.isQueueEmpty());
 
   struct stepper_command_s cmd2 = {
-      .ticks = 65535, .steps = 128, .count_up = true};
+      .ticks = MIN_DELTA_TICKS-1, .steps = 255, .count_up = true};
 
   res = s.addQueueEntry(&cmd2);
-  test(res == AQE_ERROR_STEPS_VALUE,
-       "Too high step count should trigger an error");
+  test(res == AQE_ERROR_TICKS_TOO_LOW,
+       "Too low ticks should trigger an error");
+  assert(s.isQueueEmpty());
+
+  struct stepper_command_s cmd3 = {
+      .ticks = MIN_CMD_TIME-1, .steps = 1, .count_up = true};
+
+  res = s.addQueueEntry(&cmd3);
+  test(res == AQE_ERROR_TICKS_TOO_LOW,
+       "Too short command time should trigger an error");
   assert(s.isQueueEmpty());
 }
 
