@@ -1,6 +1,7 @@
 pre-0.16.9:
 - avr: stepper definition support via AVRStepperPins.h
 - 2560: all timers and channels are checked with one test
+- addQueueEntry(): remove test for steps >= 128
 
 0.16.8:
 - Fix for issue #30: for dirPin undefined, digitalWrite/pinMode was called
